--- a/index.html
+++ b/index.html
@@ -460,8 +460,7 @@
         </div>
         
         <div class="map-container">
-            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d15713.329182025217!2d77.05972907802186!3d10.08865235762615!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3b0799794d099a6d%3A0x63250e5553c7e0c!2sPothamedu%20View%20Point!5e0!3m2!1sen!2sin!4v1651896651895!5m2!1sen!2sin" 
-                width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d4844.5300801831045!2d77.03818439999999!3d10.031136600000002!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3b079900259408a7%3A0xb553806acbc55c2e!2sCloud%20trek%20balloon%20co!5e1!3m2!1sen!2sin!4v1746632102165!5m2!1sen!2sin" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>                width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
         </div>
     </div>
 </section>
